--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+
     <title>Smadeh Kitchen</title>
   </head>
   <body>
@@ -206,6 +207,8 @@
         <a href="#" aria-label="Instagram"><ion-icon name="logo-instagram"></ion-icon></a>
       </div>
     </footer>
+
+    <script src="script.js"></script>
 
     <!-- Ionicons Script -->
     <script
