--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
         <!-- Reservation Image -->
         <img src="images/farhad-ibrahimzade-events 1.png" alt="Reservation Image">
 
+
+        <!-- Reservation Date and Time -->
         <!-- Reservation Form -->
         <div class="reserve">
           <h2>Reservation</h2>
